--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
     <head>
         <title>Rock, Paper, Scissors Game</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
     </head>
 
     <body>
+        <div id="header">
+			<div id="header2">
+				<div class="link"><a href="index.html">Rock Paper Scissors Lab</a></div>
+                <br>
+				<div class="link"><a href="BeerBottles/BeerBottles.html">Beer Bottles Lab</a></div>
+                <br>
+				<div class="link"><a href="Subjects/Subjects.html">Subjects Lab</a></div>
+			</div>
+		</div>
         <h1>ROCK! PAPER! SCISSORS!</h1>
         <div id="gameDiv">
             <form id="answerCheck">
@@ -14,7 +23,7 @@
             <br>
             <button id="button" onclick="check()">Submit Answer</button>
         </div>
-        <script src="script.js"></script>
+        <script src="javascript/script.js"></script>
     </body>
 
 </html>
