--- a/Subjects/Subjects.html
+++ b/Subjects/Subjects.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="../css/SubjectsStyle.css"/>
     </head>
 
-    <body>
+    <body id="main">
         <div id="header">
 			<div id="header2">
 				<div class="link"><a href="../index.html">Rock Paper Scissors Lab</a></div>
@@ -14,7 +14,9 @@
 				<div class="link"><a href="Subjects.html">Subjects Lab</a></div>
 			</div>
 		</div>
-        <h1>Subjects</h1>
+        <h1>Subjects Lab</h1>
+        <button onclick="go()">Enter your Subjects</button>
+        <script src="../javascript/SubjectsScript.js"></script>
       
     </body>
 
